gpu: docker: cusparse

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -249,4 +249,5 @@ ENV LEGACYPIPE_DIR=/src/legacypipe/py
 RUN apt install -y libnvrtc12
 RUN apt install -y libcudart12 libcurand10 libcusolver11 libnccl2
 RUN apt install -y libcufft11
+RUN apt install -y libcusparse12
 #RUN python -m cupyx.tools.install_library --library cudnn --cuda 12.x
